Update Checkings, Savings, Debt data display

--- a/BudgeIt/Views/Home/Index.cshtml
+++ b/BudgeIt/Views/Home/Index.cshtml
@@ -7,17 +7,10 @@
 
 
 <body class="w3-container">
-    <div class="w3-display-right" style="right:75px">
-        <form class="w3-panel w3-card-4" action="/action_page.php">
-            <h2>Create your Budget Account</h2>
-
-            <p><input class="w3-input" type="text" placeholder="First Name"></p>
-            <p><input class="w3-input" type="text" placeholder="Last Name"></p>
-            <p><input class="w3-input" type="email" placeholder="Email"></p>
-            <p><input class="w3-input" type="password" placeholder="Password"></p>
-            <p><input class="w3-input" type="password" placeholder="Confirm Password"></p>
-            <p><button class="w3-btn w3-blue">Register</button></p>
-        </form>
+    <div class="w3-display-middle">
+        <h2>Summary Page</h2>
+        @*<h3>Welcome @Session ["firstName"].ToString </h3>*@
+        <a asp-action="Login">Log Out</a> @*TODO: Log out function*@
     </div>
 </body>
 </html>
