--- a/BudgeIt/Views/Shared/_Layout.cshtml
+++ b/BudgeIt/Views/Shared/_Layout.cshtml
@@ -25,13 +25,13 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Checkings">Checkings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Checkings">Checkings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Savings">Savings</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Savings">Savings</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Debts">Debts</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Debt">Debt</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Calculator">Calculator</a>
