--- a/BudgeIt/Views/User/Login.cshtml
+++ b/BudgeIt/Views/User/Login.cshtml
@@ -24,6 +24,9 @@
                 <div class="form-group">
                     <label class="field-validation-error">@ViewBag.LoginError</label>
                 </div>
+                <div class="form-group">
+                    <label class="label-success">@ViewBag.SuccessMessage</label>
+                </div>
                 <div>
                     <a asp-action="UserReg">Create an Account</a>
                 </div>
